[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39", "py310"]
skip-magic-trailing-comma = true


[tool.zimports]
black-line-length = 88


[tool.poetry]
name = "xraysink"
version = "1.5.1"
description = "Instrument asyncio Python for distributed tracing with AWS X-Ray."
readme = "README.md"
authors = ["Gary Donovan <gazza@gazza.id.au>"]
license = "Apache 2.0"
homepage = "https://github.com/garyd203/xraysink"
repository = "https://github.com/garyd203/xraysink"
documentation = "https://github.com/garyd203/xraysink"
# If you update this keyword list, also update the one in github
keywords=["AWS", "XRay", "python", "asyncio", "distributed-tracing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
packages = [
    { include="xraysink", from="src" },
]

[tool.poetry.dependencies]
# Update the environment variable `MIN_PYTHON_VERSION` in GitHub Actions
# workflow files if the minimum Python version changes.
python = "^3.6.2"
aws_xray_sdk = "~2"
black = { version = "==22.1.0", optional = true }
flake8 = { version = "~4", optional = true }
wrapt = "^1.11"
flake8-bugbear = { version = ">=22.1.11", optional = true }
flake8-builtins = { version = "~1.5", optional = true }
flake8-comprehensions = { version = "~3.8", markers = "python_version >= '3.7'", optional = true }
flake8-eradicate = { version = "~1.2", optional = true }
flake8-executable = { version = "~2.1", optional = true }
flake8-implicit-str-concat = { version = "~0.2", optional = true }
flake8-import-order = { version = "~0.18", optional = true }
flake8-logging-format = { version = "~0.6", optional = true }
flake8-pytest-style = { version = "~1.6", optional = true }
flake8-print = { version = "~4", optional = true }
flake8-simplify = { version = "~0.18", optional = true }
flake8-string-format = { version = "~0.3", optional = true }
flake8-use-fstring = { version = "~1.3", optional = true }
yamllint = { version = "~1.26", optional = true }
zimports = { version = "~0.5", markers = "python_version >= '3.7'", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7"
aiohttp = "^3"
async-asgi-testclient = "^1.4.4"
pytest-asyncio = "^0.14"
fastapi = "^0.73"

[tool.poetry.extras]
stylecheck = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-eradicate",
    "flake8-executable",
    "flake8-implicit-str-concat",
    "flake8-import-order",
    "flake8-logging-format",
    "flake8-print",
    "flake8-pytest-style",
    "flake8-simplify",
    "flake8-string-format",
    "flake8-use-fstring",
    "yamllint",
    "zimports",
]

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
