[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
skip-magic-trailing-comma = true


[tool.zimports]
black-line-length = 88


[tool.poetry]
name = "xraysink"
version = "1.6.2"
description = "Instrument asyncio Python for distributed tracing with AWS X-Ray."
readme = "README.md"
authors = ["Gary Donovan <gazza@gazza.id.au>"]
license = "Apache 2.0"
homepage = "https://github.com/garyd203/xraysink"
repository = "https://github.com/garyd203/xraysink"
documentation = "https://github.com/garyd203/xraysink"
# If you update this keyword list, also update the one in github
keywords=["AWS", "XRay", "python", "asyncio", "distributed-tracing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
packages = [
    { include="xraysink", from="src" },
]

[tool.poetry.dependencies]
# Update the environment variable `MIN_PYTHON_VERSION` in GitHub Actions
# workflow files if the minimum Python version changes.
python = "^3.7.9"
aws_xray_sdk = "~2"
wrapt = "^1.15"

[tool.poetry.group.testing.dependencies]
# Dependencies for running unit tests
aiohttp = "^3"
async-asgi-testclient = "^1.4.4"
coverage = [
    { version = "^6.3", markers = "python_version >= '3.7'", extras=["toml"] },
    { version = "~6.2", markers = "python_version < '3.7'", extras=["toml"] },
]
fastapi = "^0.92"
pytest = "^7"
pytest-asyncio = "^0.14"
pytest-cov = "^3.0"
setuptools = "~67"


[tool.poetry.group.stylecheck.dependencies]
# Dependencies for checking file formatting

black = "==23.1.0"
flake8 = "~4"
flake8-bugbear = ">=22.1.11"
flake8-builtins = "~2.1"
flake8-comprehensions = "~3.10"
flake8-eradicate = "~1.4"
flake8-executable = "~2.1"
flake8-implicit-str-concat = "~0.4"
flake8-import-order = "~0.18"
flake8-logging-format = "~0.9"
flake8-print = "~5"
flake8-pytest-style = "~1.7"
flake8-simplify = "~0.19"
flake8-string-format = "~0.3"
flake8-use-fstring = "~1.4"
yamllint = "~1.29"
zimports = { version = "~0.6", markers = "python_version >= '3.7'" }

[build-system]
requires = ["poetry>=1.5.0"]
build-backend = "poetry.masonry.api"
